--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
   },
   "author": "ktelyakov",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.8.0",
+    "@typescript-eslint/parser": "^6.8.0",
+    "eslint": "^8.51.0"
+  }
 }
